--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main id="main-section">
     <!------------------QR code img----------------->
     <div class="img-part">
-      <img src="images/image-qr-code.png" alt="QR-code-img" class="image">
+      <img src="./image-qr-code.png" alt="QR-code-img" class="image">
     </div>
     <!--------------------Text section---------------->
     <div class="text-part">
