--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!---------------------footer---------------------->
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Pham Quang Hung</a>.
+    Coded by <a href="#">Choksi Mustakim</a>.
   </footer>
 </body>
 </html>
